<resources>
    <string name="app_name">DesirePaths</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">106869616647616</string>
    <string name="fb_login_protocol_scheme">fb106869616647616</string>
    <string name="google_maps_api">AIzaSyAia9Op2vn1Ui6a7yT8snY_Q4m4GkS2Ejo</string>
    <string name="parse_server_url">http://www.pdceng.com/</string>
    <string name="parse_app_id">AncFaiJunPalSol</string>
    <string name="addButton">Add</string>
    <string name="ftp_password">Bg1f1Kv9zwHL</string>
    <string name="ftp_username">u665689347</string>
    <string name="OK">OK</string>

    <string name="add_from_camera">Add from camera</string>
    <string name="add_from_gallery">Add from gallery</string>
    <string name="add_text_only">Add text only</string>
    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="filter">Filter</string>
    <string name="rate">Rate</string>
    <string name="add">Add</string>
    <string name="zoom_out">zoom out</string>
    <string name="zoom_in">zoom in</string>
    <string name="add_arrow">add arrow</string>
    <string name="thumbs_arrow">thumbs arrow</string>
    <string name="ideas">Ideas</string>
    <string name="comments">Comments</string>
    <string name="warnings">Warnings</string>
    <string name="space" />
    <string name="rate_module">rate module</string>
    <string name="post">POST</string>
    <string name="cancel">CANCEL</string>
    <string name="reject">reject</string>
    <string name="approve">approve</string>
    <string name="main_image">main image</string>
    <string name="icon">icon</string>
    <string name="profile">profile</string>
    <string name="rate_up">rate up</string>
    <string name="rate_down">rate down</string>
    <string name="username">username</string>
    <string name="questions_being">Question being responded to</string>
    <string name="hashes">##</string>
    <string name="commentcomment">Comment...Comment...Comment...Comment...Comment...Comment...Comment...Comment...</string>
    <string name="hashes_time_ago">## time ago</string>
    <string name="project_name">Project Name</string>
    <string name="city_state">City, State</string>
    <string name="project_descrip">Project Description: Help craft a long-term vision for the Airport Way corridor that will be used as recommendations for future projects.</string>
    <string name="website">Website</string>
    <string name="desire_paths">Desire Paths</string>
    <string name="interactive_pia">The interactive Public Involvement app</string>
    <string name="enter_anon">Enter Anonymously</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
</resources>
