<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/comment_gradient">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/upArrow"
                android:layout_width="@dimen/arrow_size"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:background="@null"
                android:contentDescription="@string/rate_up"
                android:foregroundTintMode="screen"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_rate_up" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hashes" />

            <ImageButton
                android:id="@+id/downArrow"
                android:layout_width="@dimen/arrow_size"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/rate_down"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_rate_down" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/profile"
                    app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/username"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commentcomment" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/card_margin"
                android:text="@string/hashes_time_ago"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>