<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_margin_top"
        android:background="@color/colorPrimaryDark"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDarkest"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/addInputToggle"
                style="@null"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_button_height"
                android:layout_marginEnd="@dimen/menu_button_margin_end"
                android:background="@color/colorPrimaryDark"
                android:drawableTop="@drawable/ic_add_location"
                android:stateListAnimator="@null"
                android:textOff="@string/space"
                android:textOn="@string/space" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDarkest"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/bCards"
                style="@android:style/Widget.Material.ImageButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_button_height"
                android:layout_marginEnd="@dimen/menu_button_margin_end"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/rate_module"
                android:src="@drawable/ic_thumbs_up_down" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDarkest"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/filterToggle"
                style="@null"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_button_height"
                android:layout_marginEnd="@dimen/menu_button_margin_end"
                android:background="@color/colorPrimaryDark"
                android:drawableTop="@drawable/ic_action_filter"
                android:stateListAnimator="@null"
                android:textOff="@string/space"
                android:textOn="@string/space" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDarkest"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_button_height"
                android:layout_marginEnd="@dimen/menu_button_margin_end"
                android:background="@color/colorPrimaryDark"
                android:clickable="true"
                android:contentDescription="@string/help"
                android:elevation="0dp"
                android:src="@android:drawable/ic_menu_help" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDarkest"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/info"
                android:layout_width="70dp"
                android:layout_height="@dimen/menu_button_height"
                android:background="@color/colorPrimaryDark"
                android:clickable="true"
                android:contentDescription="@string/info"
                android:elevation="0dp"
                android:src="@drawable/ic_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>