<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:elevation="0dp">
        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            tools:context="com.pdceng.www.desirepaths.MapActivity" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/myLocation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:elevation="0dp"
            android:visibility="visible"
            map:backgroundTint="@color/cardview_shadow_start_color"
            map:fabSize="mini"
            map:rippleColor="@color/lightGrey"
            map:srcCompat="@drawable/ic_my_location" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/prevMap"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/myLocation"
            android:layout_marginStart="14dp"
            android:clickable="true"
            android:elevation="0dp"
            android:visibility="invisible"
            map:backgroundTint="@color/darkBlue"
            map:fabSize="mini"
            map:srcCompat="@drawable/ic_return" />

        <include
            android:id="@+id/menu"
            layout="@layout/bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

        <include
            layout="@layout/zoom_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/menu"
            android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/llAddType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/menu"
        android:layout_margin="10dp"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addInputOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGrey"
                android:clickable="true"
                android:src="@drawable/ic_add_note"
                map:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:gravity="center_vertical"
                android:text="@string/add_text_only"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fromLibrary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:backgroundTint="@color/darkGrey"
                android:clickable="true"
                android:src="@drawable/ic_add_photo_library"
                android:visibility="visible"
                map:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:background="@drawable/rounded_corners"
                android:gravity="center_vertical"
                android:text="@string/add_from_gallery"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/takePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGrey"
                android:clickable="true"
                android:src="@drawable/ic_add_photo_camera"
                android:visibility="visible"
                map:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:gravity="center_vertical"
                android:text="@string/add_from_camera"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/addArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_above="@id/menu"
            android:layout_marginStart="20dp"
        android:contentDescription="@string/add_arrow"
        android:src="@drawable/arrow_down"
        android:visibility="invisible" />

        <ImageView
            android:id="@+id/thumbsArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/menu"
            android:layout_marginStart="95dp"
            android:contentDescription="@string/thumbs_arrow"
            android:src="@drawable/arrow_down"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/llFilter"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_above="@+id/menu"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="130dp"
            android:background="@drawable/rounded_corners"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="invisible">

            <CheckBox
                android:id="@+id/cbIdea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ideas" />

            <CheckBox
                android:id="@+id/cbComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/comments" />

            <CheckBox
                android:id="@+id/cbWarning"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/warnings" />
        </LinearLayout>

</RelativeLayout>
